# MinoteRT

./: .gitignore  CMakeLists.txt
cmake/: Assets.cmake  Dependencies.cmake  Shaders.cmake
src/: app.ixx  config.hpp  freecam.cpp  freecam.hpp  freecam.ixx  log.cpp  log.hpp  main.cpp  math.hpp
src/gfx/: camera.cpp  camera.hpp  camera.ixx  imgui.cpp  imgui.hpp  imgui.ixx  renderer.cpp  renderer.hpp  renderer.ixx  resource.hpp  resource.ixx  samplers.hpp  samplers.ixx
src/gfx/modules/: denoise.cpp  denoise.hpp  denoiser.ixx  pathtrace.cpp  pathtrace.hpp  pathtracer.ixx  sky.cpp  sky.hpp  sky.ixx  tonemap.cpp  tonemap.hpp  tonemapper.ixx
src/gpu/: denoise.comp  firstBounce.comp  imgui.frag  imgui.vert  intersect.glsl  primaryRay.comp  random.glsl  scene.glsl  secondaryRays.comp  shade.comp  shader.comp  tonemap.comp  types.glsl  util.glsl
src/gpu/denoise/: bilateral.comp
src/gpu/sky/: genMultiScattering.comp  genTransmittance.comp  genView.comp  sky.glsl  skyAccess.glsl  skyTypes.glsl
src/gpu/tonemap/: aces.comp  amd.comp  hable.comp  linear.comp  reinhard.comp  uchimura.comp
src/stx/: concepts.ixx  enum.hpp  except.hpp  except.ixx  math.ixx  ranges.hpp  ranges.ixx  time.hpp  time.ixx  types.ixx  verify.hpp
src/sys/: glfw.cpp  glfw.hpp  os.ixx  vulkan.cpp  vulkan.hpp  vulkan.ixx  window.ixx
src/util/: log.ixx  service.hpp  service.ixx
